# xrf-tool

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CMake/: Compiler.cmake  Config.cmake
Source/: Main.cpp  Prerequisites.h  XRF.cpp  XRF.h
Source/Flash/: XBFS.cpp  XBFS.h
